--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap" rel="stylesheet">
     <title>Harmonia</title>
-    <meta name="description" content="A Pattern-Based DAW with Expressive Harmony">
+    <meta name="description" content="A Pattern-Based DAW with Structural Harmony">
     <meta name="keywords" content="Harmonia, DAW, Pattern-Based, Harmony, Pattern, React">
     <meta name="author" content="Brendan Zelikman">
     <meta name="theme-color" content="#083a7a"/>
