added frequency-based scales and new pattern scale interface

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="Harmonia, DAW, Digital, Audio, Workstation, Functional, Tonality, Music, Production">
     <meta name="author" content="Brendan Zelikman">
     <meta name="theme-color" content="#083a7a"/>
+    <base target="_blank"/>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +18,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css"   />
-    <base target="_blank"/>
+    
+    <script src="tune.js"></script>
   </head>
   <body>
     <div id="root"></div>
