--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" href="/logo.ico" />
   
     <title>Harmonia</title>
-    <meta name="description" content="A Digital Audio Workstation with Functional Tonality">
+    <meta name="description" content="A Digital Audio Workstation with Hierarchical Harmony">
     <meta name="keywords" content="Harmonia, DAW, Digital, Audio, Workstation, Functional, Tonality, Music, Production">
     <meta name="author" content="Brendan Zelikman">
     <meta name="theme-color" content="#083a7a"/>
