--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css"   />
     
-    <script src="tune.js"></script>
+    <img
+    src="public/background.png"
+    class="fixed h-screen animate-background select-none object-cover -z-10 opacity-50"
+    /> 
   </head>
   <body>
     <div id="root"></div>
