moved background class to style

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     
     <img
     src="public/background.png"
-    class="fixed h-screen animate-background select-none object-cover -z-10 opacity-50"
+    style="opacity: 0.5; z-index: -10; object-fit: cover; position: fixed; height: 100vh;"
+    class="animate-background"
     /> 
   </head>
   <body>
