--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="icon" type="image/png" href="/logo.ico" />
   
     <title>Harmonia</title>
-    <meta name="description" content="A Digital Audio Workstation with Hierarchical Harmony">
-    <meta name="keywords" content="Harmonia, DAW, Digital, Audio, Workstation, Functional, Tonality, Music, Production">
+    <meta name="description" content="A Digital Audio Workstation with Multidimensional Harmony">
+    <meta name="keywords" content="Harmonia, DAW, Digital, Audio, Workstation, Multidimensional, Harmony, Music, Production, Software">
     <meta name="author" content="Brendan Zelikman">
     <meta name="theme-color" content="#083a7a"/>
     <base target="_blank"/>
@@ -18,7 +18,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css"   />
-    
     <img
     src="public/background.png"
     style="opacity: 0.5; z-index: -10; object-fit: cover; position: fixed; height: 100vh;"
