fixed cursor bug and changed pattern clip menu

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css"   />
     <img
-    src="public/background.png"
+    src="/background.png"
     style="opacity: 0.5; z-index: -10; object-fit: cover; position: fixed; height: 100vh;"
     class="animate-background"
     /> 
