moved fonts to local

--- a/index.html
+++ b/index.html
@@ -10,19 +10,13 @@
     <meta name="keywords" content="Harmonia, DAW, Digital, Audio, Workstation, Multidimensional, Harmony, Music, Production, Software">
     <meta name="author" content="Brendan Zelikman">
     <meta name="theme-color" content="#083a7a"/>
-    <base target="_blank"/>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css"   />
     <img
     src="/background.png"
-    style="opacity: 0.5; z-index: -10; object-fit: cover; position: fixed; height: 100vh;"
-    class="animate-background"
+    class="background"
     /> 
+    <base target="_blank"/>
+
   </head>
   <body>
     <div id="root"></div>
