renamed playground to calculator in most cases

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/logo.ico" />
   
-    <title>Harmonia</title>
+    <title>Harmonia | Musical Calculator</title>
     <meta name="description" content="A Digital Audio Workstation with Multidimensional Harmony">
     <meta name="keywords" content="Harmonia, DAW, Digital, Audio, Workstation, Multidimensional, Harmony, Music, Production, Software">
     <meta name="author" content="Brendan Zelikman">
