improved landing splash loading

--- a/index.html
+++ b/index.html
@@ -4,21 +4,16 @@
     <meta charset="UTF-8" />    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/logo.ico" />
-  
     <title>Harmonia | Musical Calculator</title>
     <meta name="description" content="A Digital Audio Workstation with Multidimensional Harmony">
     <meta name="keywords" content="Harmonia, DAW, Digital, Audio, Workstation, Multidimensional, Harmony, Music, Production, Software">
     <meta name="author" content="Brendan Zelikman">
     <meta name="theme-color" content="#083a7a"/>
     <link rel="stylesheet" href="index.css"   />
-    <img
-    src="/background.png"
-    class="background"
-    /> 
     <base target="_blank"/>
-
   </head>
   <body>
+    <div class="background"></div>
     <div id="root"></div>
     <script type="module" defer src="src/app/app.tsx"></script>
   </body>
