--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="author" content="Brendan Zelikman">
     <meta name="theme-color" content="#083a7a"/>
     <link rel="stylesheet" href="index.css"   />
+    <link rel="preload" href="fonts/nunito.ttf" as="font" type="font/ttf" crossorigin="anonymous"/>
     <base target="_blank"/>
   </head>
   <body>
