created demo gallery

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta name="theme-color" content="#083a7a"/>
     <link rel="stylesheet" href="index.css"   />
     <link rel="preload" href="fonts/nunito.ttf" as="font" type="font/ttf" crossorigin="anonymous"/>
+    <link ref="preload" as="image" href="logo.png" />
+    <link ref="preload" as="image" href="background.png" />
     <base target="_blank"/>
   </head>
   <body>
